methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {
^PatternPicture:1: error: expected start of definition
override def run() {
         ^PatternPicture:5: error: expected class or object definition
def faireMotif(){
^